# fcitx5-table-hiraganify

./: gen.py  hiraganify.conf  meson.build
